--- a/jogo_da_velha/jogoDaVelhaQT/jogodavelha.ui
+++ b/jogo_da_velha/jogoDaVelhaQT/jogodavelha.ui
@@ -27,14 +27,14 @@
       <item row="0" column="2">
        <widget class="QLabel" name="lb_user_score">
         <property name="text">
-         <string>TextLabel</string>
+         <string>User: 0</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QLabel" name="lb_ai_score">
         <property name="text">
-         <string>TextLabel</string>
+         <string>Computador: 0</string>
         </property>
        </widget>
       </item>
