--- a/jogo_da_velha/jogoDaVelhaQT/jogodavelha.ui
+++ b/jogo_da_velha/jogoDaVelhaQT/jogodavelha.ui
@@ -39,7 +39,7 @@
        </widget>
       </item>
       <item row="1" column="0" colspan="4">
-       <widget class="QLabel" name="label_3">
+       <widget class="QLabel" name="lb_result">
         <property name="maximumSize">
          <size>
           <width>16777215</width>
