--- a/jogo_da_velha/jogoDaVelhaQT/jogodavelha.ui
+++ b/jogo_da_velha/jogoDaVelhaQT/jogodavelha.ui
@@ -19,6 +19,12 @@
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
        <widget class="QPushButton" name="btn_start">
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: white</string>
+        </property>
         <property name="text">
          <string>Start</string>
         </property>
@@ -87,6 +93,12 @@
       </item>
       <item row="0" column="1">
        <widget class="QPushButton" name="btn_reset">
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: white</string>
+        </property>
         <property name="text">
          <string>Reset</string>
         </property>
@@ -271,8 +283,32 @@
      <height>22</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: white</string>
+   </property>
+   <widget class="QMenu" name="menuSettings">
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="title">
+     <string>Settings</string>
+    </property>
+    <addaction name="actionbackground"/>
+   </widget>
+   <addaction name="menuSettings"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionbackground">
+   <property name="text">
+    <string>background</string>
+   </property>
+   <property name="toolTip">
+    <string>hover
+{
+color: black;
+}</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
